force-app/main/default/objects/Opportunity/fields/Femenino__c.field-meta.xml
<CustomField>
    <fullName>Femenino__c</fullName>
    <description>Este campo se utiliza para el envio de plantillas de Docusign NO BORRAR NI MODIFICAR</description>
    <formula>ISPICKVAL(Sexo__c,&quot;F&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Femenino</label>
    <type>Checkbox</type>
</CustomField>