force-app/main/default/objects/Opportunity/fields/Fuente__c.field-meta.xml
<CustomField>
    <fullName>Fuente__c</fullName>
    <label>Fuente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>