force-app/main/default/objects/Opportunity/fields/Indicador_de_Afiliacion_de_Inmediata__c.field-meta.xml
<CustomField>
    <fullName>Indicador_de_Afiliacion_de_Inmediata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afiliación de Inmediata</label>
    <type>Checkbox</type>
</CustomField>