force-app/main/default/objects/Opportunity/fields/Indicador_de_contratacion_de_emergencia__c.field-meta.xml
<CustomField>
    <fullName>Indicador_de_contratacion_de_emergencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contratación de emergencia</label>
    <type>Checkbox</type>
</CustomField>