force-app/main/default/objects/Opportunity/fields/Integrantes_de_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Integrantes_de_Oportunidad__c</fullName>
    <label>Integrantes de Oportunidad</label>
    <summaryForeignKey>Integrante__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>