force-app/main/default/objects/Opportunity/fields/Jefe_Canal_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Jefe_Canal_Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefe Canal Empresa</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>