force-app/main/default/objects/Opportunity/fields/Localidad_new__c.field-meta.xml
<CustomField>
    <fullName>Localidad_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Localidad</label>
    <referenceTo>Localidad__c</referenceTo>
    <relationshipLabel>Localidad</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>