force-app/main/default/objects/Opportunity/fields/Masculino__c.field-meta.xml
<CustomField>
    <fullName>Masculino__c</fullName>
    <description>este campo se tuliza para para el envio de plantillas de docuasign, NO BORRAR ni MODIFICAR</description>
    <formula>ISPICKVAL(Sexo__c,&quot;M&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Masculino</label>
    <type>Checkbox</type>
</CustomField>