force-app/main/default/objects/Opportunity/fields/Medio_de_cobro__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_cobro__c</fullName>
    <label>Medio de cobro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CBU</fullName>
            </value>
            <value>
                <fullName>Tarjeta</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>