force-app/main/default/objects/Opportunity/fields/Medio_de_cobro_docusign2__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_cobro_docusign2__c</fullName>
    <description>Este campo se utiliza para el envio de documento de Docusign, NO BORRAR</description>
    <formula>OR(
				ISBLANK(TEXT(Medio_de_cobro__c)),
				ISPICKVAL(Medio_de_cobro__c,&quot;Otros&quot;)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medio de cobro docusign2</label>
    <type>Checkbox</type>
</CustomField>