force-app/main/default/objects/Opportunity/fields/Medio_de_cobro_docusign__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_cobro_docusign__c</fullName>
    <description>Esta formula se usa para el envió de documentos de docusign, NO BORRAR</description>
    <formula>OR(
				ISPICKVAL(Medio_de_cobro__c,&quot;Tarjeta&quot;),
				ISPICKVAL(Medio_de_cobro__c,&quot;CBU&quot;)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medio de cobro docusign</label>
    <type>Checkbox</type>
</CustomField>