force-app/main/default/objects/Opportunity/fields/Motivo_de_cierre_front__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_cierre_front__c</fullName>
    <label>Motivo de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No se aceptan condiciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>