force-app/main/default/objects/Opportunity/fields/Motivo_de_no_interes__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_no_interes__c</fullName>
    <label>Motivo de no interés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Servicio/ Producto</fullName>
            </value>
            <value>
                <fullName>Prestadores</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>