force-app/main/default/objects/Opportunity/fields/Motivo_de_perdida__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_perdida__c</fullName>
    <label>Motivo de pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cambio de titular</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Falta de contacto</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Otro/s</fullName>
            </value>
            <value>
                <fullName>Patolgía preexistente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>