force-app/main/default/objects/Opportunity/fields/Motivo_No_Califica__c.field-meta.xml
<CustomField>
    <fullName>Motivo_No_Califica__c</fullName>
    <label>Motivo No Califica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Condición crediticia (NOSIS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>