force-app/main/default/objects/Opportunity/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <label>Nacionalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>054</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>410</fullName>
                <label>España</label>
            </value>
            <value>
                <fullName>039</fullName>
                <label>Italia</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Bolivia</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brasil</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>Chile</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Colombia</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Costa Rica</label>
            </value>
            <value>
                <fullName>CU</fullName>
                <label>Cuba</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <label>Ecuador</label>
            </value>
            <value>
                <fullName>SV</fullName>
                <label>El Salvador</label>
            </value>
            <value>
                <fullName>502</fullName>
                <label>Guatemala</label>
            </value>
            <value>
                <fullName>504</fullName>
                <label>Honduras</label>
            </value>
            <value>
                <fullName>MX</fullName>
                <label>Mexico</label>
            </value>
            <value>
                <fullName>NI</fullName>
                <label>Nicaragua</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Panama</label>
            </value>
            <value>
                <fullName>PY</fullName>
                <label>Paraguay</label>
            </value>
            <value>
                <fullName>PE</fullName>
                <label>Peru</label>
            </value>
            <value>
                <fullName>809</fullName>
                <label>República Dominicana</label>
            </value>
            <value>
                <fullName>UY</fullName>
                <label>Uruguay</label>
            </value>
            <value>
                <fullName>VE</fullName>
                <label>Venezuela</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>