force-app/main/default/objects/Opportunity/fields/Nmero_de_tarjeta_de_credito__c.field-meta.xml
<CustomField>
    <fullName>Nmero_de_tarjeta_de_credito__c</fullName>
    <label>Número de tarjeta de crédito</label>
    <length>18</length>
    <type>Text</type>
</CustomField>