force-app/main/default/objects/Opportunity/fields/Nombre_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Nombre_cuenta__c</fullName>
    <description>Este campo se utiliza para el envio de plantillas de docusign</description>
    <formula>Account.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre cuenta</label>
    <type>Text</type>
</CustomField>