force-app/main/default/objects/Opportunity/fields/Nombre_del_propietario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_propietario__c</fullName>
    <description>Este campo se utiliza para los destinatarios de Docusign</description>
    <formula>Owner.LastName + Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del propietario</label>
    <type>Text</type>
</CustomField>