force-app/main/default/objects/Opportunity/fields/Nombre_INDCORP__c.field-meta.xml
<CustomField>
    <fullName>Nombre_INDCORP__c</fullName>
    <label>Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>