force-app/main/default/objects/Opportunity/fields/Nombre_Organizador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Organizador__c</fullName>
    <description>Este campo se utiliza para el envio de plantillas de docusign</description>
    <formula>Organizador_lookup__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Organizador</label>
    <type>Text</type>
</CustomField>