force-app/main/default/objects/Opportunity/fields/Nomre_de_la_cuneta__c.field-meta.xml
<CustomField>
    <fullName>Nomre_de_la_cuneta__c</fullName>
    <description>Este campo se utiliza para el envio de plantillas docusign</description>
    <formula>Account.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nomre de la cuneta</label>
    <type>Text</type>
</CustomField>