force-app/main/default/objects/Opportunity/fields/Nro_asociado_titular_anterior__c.field-meta.xml
<CustomField>
    <fullName>Nro_asociado_titular_anterior__c</fullName>
    <formula>Titular_del_grupo_familiar_anterior__r.Codigo_de_Afiliado__c</formula>
    <label>Nro. asociado titular anterior</label>
    <type>Text</type>
</CustomField>