force-app/main/default/objects/Opportunity/fields/Nro_CBU_para_cobro_de_cuota__c.field-meta.xml
<CustomField>
    <fullName>Nro_CBU_para_cobro_de_cuota__c</fullName>
    <label>Nro. CBU para cobro de cuota</label>
    <length>22</length>
    <type>Text</type>
</CustomField>