force-app/main/default/objects/Opportunity/fields/Nro_de_precarga__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_precarga__c</fullName>
    <label>Nro. de precarga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>