force-app/main/default/objects/Opportunity/fields/Nro_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_solicitud__c</fullName>
    <externalId>true</externalId>
    <label>Nro. de solicitud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>