force-app/main/default/objects/Opportunity/fields/Nuevo_titular__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_titular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nuevo titular</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>TIT</value>
        </filterItems>
        <filterItems>
            <field>Account.Estado__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Nuevo titular)</relationshipLabel>
    <relationshipName>Nuevotitularopp</relationshipName>
    <type>Lookup</type>
</CustomField>