force-app/main/default/objects/Opportunity/fields/Numero_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_documento__c</fullName>
    <label>Número de documento</label>
    <length>15</length>
    <type>Text</type>
</CustomField>