force-app/main/default/objects/Opportunity/fields/Numero_de_empleados__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_empleados__c</fullName>
    <label>Número de empleados</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>