force-app/main/default/objects/Opportunity/fields/Obra_social_del_titular__c.field-meta.xml
<CustomField>
    <fullName>Obra_social_del_titular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra social del titular</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Obra social</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Obra social del titular)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>