force-app/main/default/objects/Opportunity/fields/Oportunidad_Corporativa__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Corporativa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad Corporativa</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Individuos de Oportunidad Corporativa</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>