force-app/main/default/objects/Opportunity/fields/Organizador__c.field-meta.xml
<CustomField>
    <fullName>Organizador__c</fullName>
    <label>Organizador Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>