force-app/main/default/objects/Opportunity/fields/Otro_motivo_de_no_interes__c.field-meta.xml
<CustomField>
    <fullName>Otro_motivo_de_no_interes__c</fullName>
    <label>Otro motivo de no interés</label>
    <length>255</length>
    <type>Text</type>
</CustomField>