force-app/main/default/objects/Opportunity/fields/Parentesco__c.field-meta.xml
<CustomField>
    <fullName>Parentesco__c</fullName>
    <label>Parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PA</fullName>
                <label>Padres</label>
            </value>
            <value>
                <fullName>HI</fullName>
                <label>Hijo/a</label>
            </value>
            <value>
                <fullName>SO</fullName>
                <label>Sobrino/a</label>
            </value>
            <value>
                <fullName>HR</fullName>
                <label>Hermano/a</label>
            </value>
            <value>
                <fullName>SG</fullName>
                <label>Suegro/a</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Conyuge</label>
            </value>
            <value>
                <fullName>FC</fullName>
                <label>Familiar a Cargo</label>
            </value>
            <value>
                <fullName>FD</fullName>
                <label>Familiar Directo</label>
            </value>
            <value>
                <fullName>NT</fullName>
                <label>Nieto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>