force-app/main/default/objects/Opportunity/fields/PC__c.field-meta.xml
<CustomField>
    <fullName>PC__c</fullName>
    <description>Este campo se usa para poner en TRUE si el medio de cobro es &quot;Otros&quot; se utiliza en unca casilla para el envio de documento de Docusign, NO BORRAR</description>
    <formula>ISPICKVAL(Medio_de_cobro__c,&quot;Otros&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PC</label>
    <type>Checkbox</type>
</CustomField>