force-app/main/default/objects/Opportunity/fields/Plan_del_grupo_familiar__c.field-meta.xml
<CustomField>
    <fullName>Plan_del_grupo_familiar__c</fullName>
    <label>Plan del grupo familiar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS100</fullName>
            </value>
            <value>
                <fullName>AS200</fullName>
            </value>
            <value>
                <fullName>AS204</fullName>
            </value>
            <value>
                <fullName>AS300</fullName>
            </value>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>AS500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>