force-app/main/default/objects/Opportunity/fields/Plan_Grupo_Corporativo__c.field-meta.xml
<CustomField>
    <fullName>Plan_Grupo_Corporativo__c</fullName>
    <label>Plan de Grupo Corporativo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AS200</fullName>
            </value>
            <value>
                <fullName>AS204</fullName>
            </value>
            <value>
                <fullName>AS300</fullName>
            </value>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>AS500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>