force-app/main/default/objects/Opportunity/fields/Provincia_docusign__c.field-meta.xml
<CustomField>
    <fullName>Provincia_docusign__c</fullName>
    <description>Este campo se utiliza para mostrar el nombre de la provincia para el envio de Documentos Docusign, NO BORRAR</description>
    <formula>IF(ISPICKVAL(Provincia_lista__c,&quot;B&quot;),&quot;Buenos Aires&quot;,
			IF(ISPICKVAL(Provincia_lista__c,&quot;K&quot;),&quot;Catamarca&quot;,
						IF(ISPICKVAL(Provincia_lista__c,&quot;H&quot;),&quot;Chaco&quot;,
									IF(ISPICKVAL(Provincia_lista__c,&quot;U&quot;),&quot;Chubut&quot;,
												IF(ISPICKVAL(Provincia_lista__c,&quot;C&quot;),&quot;Ciudad Autónoma de Buenos Aires&quot;,
															IF(ISPICKVAL(Provincia_lista__c,&quot;X&quot;),&quot;Córdoba&quot;,
																		IF(ISPICKVAL(Provincia_lista__c,&quot;W&quot;),&quot;Corrientes&quot;,
																					IF(ISPICKVAL(Provincia_lista__c,&quot;E&quot;),&quot;Entre Ríos&quot;,
																								IF(ISPICKVAL(Provincia_lista__c,&quot;P&quot;),&quot;Formosa&quot;,
																											IF(ISPICKVAL(Provincia_lista__c,&quot;Y&quot;),&quot;Jujuy&quot;,
																														IF(ISPICKVAL(Provincia_lista__c,&quot;L&quot;),&quot;La Pampa&quot;,
																																	IF(ISPICKVAL(Provincia_lista__c,&quot;F&quot;),&quot;La Rioja&quot;,
																																				IF(ISPICKVAL(Provincia_lista__c,&quot;M&quot;),&quot;Mendoza&quot;,
																																							IF(ISPICKVAL(Provincia_lista__c,&quot;N&quot;),&quot;Misiones&quot;,
																																										IF(ISPICKVAL(Provincia_lista__c,&quot;Q&quot;),&quot;Neuquén&quot;,
																																													IF(ISPICKVAL(Provincia_lista__c,&quot;R&quot;),&quot;Río Negro&quot;,
																																																IF(ISPICKVAL(Provincia_lista__c,&quot;A&quot;),&quot;Salta&quot;,
																																																			IF(ISPICKVAL(Provincia_lista__c,&quot;J&quot;),&quot;San Juan&quot;,
																																																						IF(ISPICKVAL(Provincia_lista__c,&quot;D&quot;),&quot;San Luís&quot;,
																																																									IF(ISPICKVAL(Provincia_lista__c,&quot;Z&quot;),&quot;Santa Cruz&quot;,
																																																												IF(ISPICKVAL(Provincia_lista__c,&quot;S&quot;),&quot;Santa Fe&quot;,
																																																															IF(ISPICKVAL(Provincia_lista__c,&quot;G&quot;),&quot;Santiago del Estero&quot;,
																																																																		IF(ISPICKVAL(Provincia_lista__c,&quot;V&quot;),&quot;Tierra del Fuego&quot;,
																																																																					IF(ISPICKVAL(Provincia_lista__c,&quot;T&quot;),&quot;Tucumán&quot;,&quot;&quot;
																																																																								)
																																																																					)
																																																																		)
																																																															)
																																																												)
																																																									)
																																																						)
																																																			)
																																																)
																																													)
																																										)
																																							)
																																				)
																																	)
																														)
																											)
																								)
																					)
																		)
															)
												)
									)
						)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia docusign</label>
    <type>Text</type>
</CustomField>