force-app/main/default/objects/Opportunity/fields/Provincia_lista__c.field-meta.xml
<CustomField>
    <fullName>Provincia_lista__c</fullName>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Buenos Aires</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Catamarca</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Chaco</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Chubut</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Ciudad Autónoma de Buenos Aires</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Córdoba</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Corrientes</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Entre Ríos</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Formosa</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Jujuy</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>La Pampa</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>La Rioja</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Mendoza</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Misiones</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Neuquén</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Río Negro</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Salta</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>San Juan</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>San Luís</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Santa Cruz</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Santa Fe</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Santiago del Estero</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Tierra del Fuego</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Tucumán</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>