force-app/main/default/objects/Opportunity/fields/Recordar_Llamada__c.field-meta.xml
<CustomField>
    <fullName>Recordar_Llamada__c</fullName>
    <label>Recordar Llamada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7 días</fullName>
            </value>
            <value>
                <fullName>14 días</fullName>
            </value>
            <value>
                <fullName>1 mes</fullName>
            </value>
            <value>
                <fullName>2 días</fullName>
            </value>
            <value>
                <fullName>3 días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>