force-app/main/default/objects/Opportunity/fields/Reingresa_como__c.field-meta.xml
<CustomField>
    <fullName>Reingresa_como__c</fullName>
    <label>Reingresa como</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titular</fullName>
            </value>
            <value>
                <fullName>Familiar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>