force-app/main/default/objects/Opportunity/fields/Reingreso__c.field-meta.xml
<CustomField>
    <fullName>Reingreso__c</fullName>
    <description>Este campo se utiliza para pasar a check el valor del campo Tipo_de_solicitud__c. Este campo se utilizar en las plantillas de Docusign. NO BORRAR, NO MODIFICAR</description>
    <formula>OR(
				ISPICKVAL(Tipo_de_Solicitud__c,&quot;REINGRESO&quot;),
				ISPICKVAL(Tipo_de_Solicitud__c,&quot;REING_GFAM&quot;)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reingreso</label>
    <type>Checkbox</type>
</CustomField>